--- a/create-plugin-driver/package.json
+++ b/create-plugin-driver/package.json
@@ -6,5 +6,8 @@
   "bin": "./index.js",
   "keywords": [],
   "author": "spl",
+  "publishConfig": {
+    "access": "public"
+  },
   "license": "MIT"
 }
